--- a/style.css
+++ b/style.css
@@ -69,6 +69,6 @@ nav {
 
 p {
 	font-size: 20px;
-	font-family: 'M PLUS Rounded 1c', sans-serif;
+	font-family: 'Quicksand', sans-serif;
 	color: white;
 }
