--- a/style.css
+++ b/style.css
@@ -52,23 +52,21 @@ nav {
 }
 
 .results {
-  padding-top: 5%;
   text-align: center;
 }
 
 .js-single-result {
-	float: left;
-	max-width: 40%;
+  text-align: center;
 }
 
 .js-name {
 	font-size: 25px;
 	font-weight: bold;
-	color: #FFF65C;
+	color: #FF0000;
 }
 
 p {
 	font-size: 20px;
 	font-family: 'Quicksand', sans-serif;
-	color: white;
+	color: black;
 }
